[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autourgos-token-memory"
version = "1.0.1"
description = "Token-bounded short-term memory for Autourgos agents — TokenBufferedMemory."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jitin Kumar Sengar", email = "devxjitin@gmail.com"}
]
keywords = ["autourgos", "agent", "memory", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]

[project.urls]
Homepage = "https://github.com/devxjitin/autourgos-token-memory"
Repository = "https://github.com/devxjitin/autourgos-token-memory"
Issues = "https://github.com/devxjitin/autourgos-token-memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autourgos_token_memory*"]

[tool.setuptools.package-data]
autourgos_token_memory = ["py.typed"]